--- a/ColorController.Android/ColorController.Android.csproj
+++ b/ColorController.Android/ColorController.Android.csproj
@@ -565,6 +565,9 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\pair_new_device_small.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\searchingLoop.gif" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
